Simplify investigation scenario workflow
